Fixed mobile overlapped menu

--- a/docs/en-us/assets/style.css
+++ b/docs/en-us/assets/style.css
@@ -1086,7 +1086,7 @@ body {
         left: 1rem;
         right: 1rem;
         border-radius: 1rem;
-        z-index: 100;
+        z-index: 102;
         background: var(--ts-gray-50);
         padding: 1.5rem;
         overflow-y: auto;
